<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="ContactUsModel"
            type="com.neon.lms.model.ContactUsModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/included"
                layout="@layout/activity_toolbar_layout" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llMian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:text="@string/sendMsg" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:hint="@string/yourname"
                android:textColorHint="@color/black"
                android:padding="@dimen/_4sdp">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@={ContactUsModel.name}"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:hint="@string/youremail"
                android:textColorHint="@color/black"
                android:padding="@dimen/_4sdp">


                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>
 <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:hint="@string/yourphone"
                android:textColorHint="@color/black"
                android:padding="@dimen/_4sdp">


                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:hint="@string/yourmsg"
                android:textColorHint="@color/black"
                android:padding="@dimen/_4sdp">

                <EditText
                    android:id="@+id/edtComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:breakStrategy="balanced"
                    android:fitsSystemWindows="true"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:text="@={ContactUsModel.message}"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/txtSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/normal_bg"
                android:gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</layout>