<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="SignInModel"
            type="com.neon.lms.model.SignInModel" />
    </data>


    <LinearLayout
        android:id="@+id/linmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:background="@color/actionbar"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resetMyPass"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />


            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26sdp"
                android:background="@drawable/edittextborder"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/customTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/resetPass"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>


            <TextView
                android:id="@+id/ctSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="right"
                android:padding="@dimen/_4sdp"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>


    <!--android:onClick="@{(view) -> SignInModel.signUpBtn()}"-->


</layout>