<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="FaqListModel"
            type="com.neon.lms.model.FaqListModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:orientation="vertical">

        <include
            android:id="@+id/included"
            layout="@layout/activity_toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_6sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/findyour"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_6sdp"
                android:text="@string/queans"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
            <TextView
                android:id="@+id/noData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/noDataFound"
                android:textSize="@dimen/_18sdp"
                android:visibility="gone" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>
</layout>