<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="CartListModel"
            type="com.neon.lms.model.CartListModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/included"
            layout="@layout/activity_toolbar_layout" />

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/app_bg"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_weight="1"
                                android:text="@string/totalAmount"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:id="@+id/txtTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14sdp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_weight="1"
                                android:text="@string/Tax"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:id="@+id/txtShipping"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:gravity="right"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14sdp" />

                        </LinearLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:background="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:layout_weight="1"
                                android:text="@string/sub_total"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:id="@+id/txtsubtotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14sdp" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edtpromoCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enterPromo"
                            android:padding="@dimen/_6sdp"
                            android:layout_marginRight="@dimen/_16sdp"
                            android:background="@drawable/edittextborder"/>

                        <TextView
                            android:id="@+id/txtApply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/normal_bg"
                            android:gravity="center|left"
                            android:layout_marginRight="@dimen/_6sdp"
                            android:padding="@dimen/_6sdp"
                            android:text="@string/apply"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />
                        <TextView
                            android:id="@+id/txtPromoCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:padding="@dimen/_6sdp"
                            android:text="@string/offer"
                            android:textColor="@color/txtColorBlue"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnCheckout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/_56sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_56sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@drawable/normal_bg"
                        android:elevation="@dimen/_6sdp"
                        android:text="@string/confirmOrder"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</layout>