<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="LessionListModel"
            type="com.neon.lms.model.LessionListModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/app_bg"
        android:orientation="vertical">

        <include
            android:id="@+id/included"
            layout="@layout/activity_toolbar_layout" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                android:gravity="left"
                android:padding="@dimen/_4sdp"
                android:text="@string/dummyText"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:gravity="left"
                android:padding="@dimen/_4sdp"
                android:text="@string/largedummyText"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/player"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_6sdp"
                    android:gravity="left"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/coursetimeline"
                    android:textColor="@color/txtColorsky"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</layout>